basic style -fixing layout issues

--- a/style.css
+++ b/style.css
@@ -439,12 +439,10 @@ a:visited {
   
 .welcomeSectionBanner {
     width: 100%;
-    height: 50px;
 }  
 
 .welcomeSectionTitle {
     display: inline;
-    margin: 0;
 }
 
 .mainStory,
@@ -479,6 +477,8 @@ a:visited {
     background-repeat: no-repeat;
     background-size: cover;
     color: white;
+    padding: 5px;
+    margin: 5px;
 }
 
 .subStory1 {
@@ -497,7 +497,6 @@ a:visited {
     background-image: url(assets/musician.jpg);
 }
 
-
 .redBorder {
     border-left: 3px solid red;
     padding-left: 6px;
@@ -507,23 +506,34 @@ a:visited {
     News Section Style
   ///////////////////////////////*/
 
+.newsStoriesContainer {
+    display: inline;
+    width: 100%;
+}
+
+.newsTitle {
+    margin-left: 10px;
+}
 
 .newStories {
-    height: 175px;
-    width: 275px;
+    box-sizing: border-box;
+    height: 275px;
+    width: 33.33%;
     background-repeat: no-repeat;
     background-size: cover;
     color: white;
+    margin: 10px;
+    padding: 5px;
 }
 
 .newsStory1 {
-    background-image: url(assets/american_flag.jpg);
+    background-image: url(assets/biden_harris.jpg);
 }
 
 .newsStory2 {
-    background-image: url(assets/vaccine.jpg);
+    background-image: url(assets/peace_protests.jpg);
 }
 
 .newsStory3 {
-    background-image: url(assets/computer_work.jpg);
+    background-image: url(assets/trumphair.jpg);
 }
